--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               }
             ],
             "styles": [
-               "node_modules/@angular/material/prebuilt-themes/cyan-orange.css",
+              "src/custom-theme.scss",
               "src/styles.css"
             ]
           },
